# coveritytester

./: BugList.md  CMakeLists.txt  DummyClass.cpp  DummyClass.h  InitializationOfArrays.cpp  InitializationOfArrays.h  TestWarning.cpp  TestWarning.h  cppchecker.bat  main.cpp  misc.cpp  misc.h
Buildsystem_CMake/: HOWTOmakeCMakeLists.txt  RevisionHistory_Buildsystem_CMake.txt  build.py  generateBinaryName.py  makeCMakeLists.py  postbuildstep.bat  postbuildstepCopyOnly.bat  prepareCmake.py  versionextract.py
Buildsystem_CMake/modules/: AllWarnings.cmake  BasicChecks.cmake  BasicDefines.cmake  CodeCoverage.cmake  CodeCoverage_Driver.cmake  DefaultBuerkertImplDir.cmake  DefaultLinkerScript.cmake  DefaultUserAreaPath.cmake  ESA.cmake  FunctionDataSections.cmake  HardFP.cmake  NoExceptions.cmake  NoRtti.cmake  NoStrictAliasing.cmake  OmitFramePointer.cmake  PSRAM.cmake  SDRAM.cmake  SoftFP.cmake  UnitTest.cmake  UnitTest_Driver.cmake  c++14.cmake  c++17.cmake  clang-tidy.cmake
Buildsystem_CMake/toolchains/: arm-none-eabi_CORTEX_M0.cmake  arm-none-eabi_CORTEX_M3.cmake  arm-none-eabi_CORTEX_M4.cmake  (+7 more)
MISRA/: MISRA_c2004_1.config  MISRA_c2004_2.config  MISRA_c2004_3.config  MISRA_c2004_4.config  MISRA_c2004_5.config  MISRA_c2004_6.config  MISRA_c2004_7.config  MISRA_c2012_1.config  MISRA_c2012_2.config  MISRA_c2012_3.config  MISRA_c2012_4.config  MISRA_c2012_5.config  MISRA_c2012_6.config  MISRA_c2012_7.config  MISRA_cpp2008_1.config  MISRA_cpp2008_2.config  MISRA_cpp2008_3.config  MISRA_cpp2008_4.config  MISRA_cpp2008_5.config  MISRA_cpp2008_6.config  MISRA_cpp2008_7.config
(+4 files in other folders)
